--- a/mobile/styles.css
+++ b/mobile/styles.css
@@ -2,13 +2,12 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
 }
 
 .banner {
   width: 100%;
   height: 100vh;
-  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(/Images/background.jpeg);
+  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/mobile/Images/background.jpeg);
   background-size: cover;
   background-position: center;
 }
@@ -38,7 +37,6 @@
 .navbar ul li {
   margin: 0 20px;
   position: relative;
-  list-style: none;
 }
 
 .navbar ul li a {
@@ -47,8 +45,7 @@
 }
 
 /* Navbar Hovering */
-
-.navbar ul li::after{
+.navbar ul li::after {
   content: '';
   height: 3px;
   width: 0;
@@ -59,7 +56,7 @@
   transition: 0.5s;
 }
 
-.navbar ul li:hover::after{
+.navbar ul li:hover::after {
   width: 100%;
 }
 
@@ -71,10 +68,8 @@
   min-width: 300px;
   max-height: 0;
   overflow: hidden;
-  /* Changed ease-in to ease-out */
   transition: max-height 0.3s ease-out;
   flex-direction: column;
-
 }
 
 .dropdown-content.show {
@@ -82,7 +77,7 @@
 }
 
 /* Show the dropdown content when clicking on the parent */
-.dropdown.clicked .dropdown-content  {
+.dropdown.clicked .dropdown-content {
   display: block;
   max-height: 500px;
 }
@@ -96,7 +91,7 @@
   text-decoration: none;
   display: block;
   padding: 5px;
-  text-align:left;
+  text-align: left;
 }
 
 .dropdown-content li a:hover {
@@ -127,34 +122,10 @@
     color: #fff;
     cursor: pointer;
   }
-  
+
   /* Show the mobile menu when active */
   #menu.active {
     display: flex;
     flex-direction: column;
   }
-  
-  /* Responsive Styles */
-  @media screen and (max-width: 768px) {
-    .navbar {
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
-    }
-  
-    .navbar ul {
-      display: none; /* Hide the desktop menu */
-    }
-  
-    /* Show the mobile menu icon */
-    .menu-icon {
-      display: block;
-    }
-  
-    /* Show the desktop menu when not active */
-    #menu:not(.active) {
-      display: flex;
-    }
-  }
-
 }
