--- a/mobile/styles.css
+++ b/mobile/styles.css
@@ -65,8 +65,8 @@
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #5c5c5c6e;
-  min-width: 180px; /* Adjust the width for mobile */
+  background-color: #5c5c5c;
+  min-width: 120px; /* Adjust the width for mobile */
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.3s ease-out;
