--- a/mobile/styles.css
+++ b/mobile/styles.css
@@ -65,7 +65,7 @@
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #3d3d3d;
+  background-color: #303030;
   min-width: 300px;
   max-height: 0;
   overflow: visible;
@@ -96,7 +96,7 @@
 }
 
 .dropdown-content li a:hover {
-  background-color: #ffffff42;
+  background-color: #6a6a6a;
 }
 
 /* Responsive Styles */
