--- a/mobile/styles.css
+++ b/mobile/styles.css
@@ -129,4 +129,16 @@
     display: flex;
     flex-direction: column;
   }
+
+/* Add styles for mobile menu icon */
+.menu-icon {
+  display: none;
+  font-size: 1.5rem;
+  background: none;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+}
+
+
 }
