--- a/mobile/styles.css
+++ b/mobile/styles.css
@@ -96,7 +96,7 @@
 }
 
 .dropdown-content li a:hover {
-  background-color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.132);
 }
 
 /* Responsive Styles */
