--- a/desktop/styles.css
+++ b/desktop/styles.css
@@ -1,9 +1,66 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+
 /* Global Styles */
 * {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
+
+/* Main Content Styles*/
+.content {
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  text-align: center;
+  color: #fff;
+}
+
+.content h1 {
+  font-size: 70px;
+  margin-top: 80px;
+}
+
+.content p {
+  margin: 20px auto;
+  font-weight: 100;
+  line-height: 25px;
+}
+
+ button {
+  width: 200px;
+  padding: 15px 0;
+  text-align: center;
+  margin: 20px 10px;
+  border-radius: 25px;
+  font-weight: bold;
+  border: 2px solid #009688;
+  background: transparent;
+  color: white;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+}
+
+span {
+  background: #009688;
+  height: 100%;
+  width: 0;
+  border-radius: 25px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: -1;
+  transition: 0.5s;
+}
+
+button:hover span {
+  width: 100%;
+}
+
+/*-------------------------------------------------------------------------- */
 
 .banner {
   width: 100%;
@@ -11,10 +68,12 @@
   background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/desktop/Images/background.jpeg);
   background-size: cover;
   background-position: center;
+  position: relative;
 }
 
 .navbar {
-  width: 85%;
+  background-color: rgba(0, 0, 0, 0.581);
+  width: 100%;
   margin: auto;
   display: flex;
   align-items: center;
@@ -25,6 +84,7 @@
 .logo {
   width: 120px;
   cursor: pointer;
+
 }
 
 .navbar ul {
@@ -65,22 +125,22 @@
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #5c5c5c6e;
-  min-width: 300px;
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 0.3s ease-out;
+  background-color: #5c5c5c24;
+  min-width: 200px;
+  max-height: 0px;
+  overflow-y: auto;
   flex-direction: column;
+  transition: max-height 0.5s ease-in;
+  font-size: small;
 }
 
 .dropdown-content.show {
-  max-height: 500px;
+  max-height: 100px;
 }
 
 /* Show the dropdown content when clicking on the parent */
-.dropdown.clicked .dropdown-content {
-  display: block;
-  max-height: 500px;
+.dropdown.clicked .dropdown-content { 
+  max-height: 1000px;
 }
 
 .dropdown-content li {
