--- a/mobile/styles.css
+++ b/mobile/styles.css
@@ -10,6 +10,7 @@
   padding: 20px;
   text-align: center;
   color: #fff;
+  margin-top: 80px;
 }
 
 .content h1 {
@@ -68,12 +69,15 @@ button:hover span {
 .navbar {
   background-color: rgba(0, 0, 0, 0.581);
   width: 100%;
-  margin: auto;
+  position: fixed; /* Set the navbar to a fixed position */
+  top: 0; /* Position it at the top of the screen */
+  left: 0;
+  z-index: 999; /* Ensure the navbar stays above other elements */
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 80px;
-  padding: 0 20px; /* Add padding to the navbar for better spacing */
+  padding: 0 20px;
 }
 
 .logo {
