--- a/mobile/styles.css
+++ b/mobile/styles.css
@@ -19,7 +19,7 @@
   flex-direction: column;
 }
 
-/* Main Content Styles */
+/* Main Content Styles*/
 .content {
   text-align: center;
   color: #fff;
@@ -152,7 +152,7 @@ button:hover span {
 }
 
 /* Show the dropdown content when clicking on the parent */
-.dropdown.clicked .dropdown-content {
+.dropdown.clicked .dropdown-content { 
   max-height: 1000px;
 }
 
@@ -189,16 +189,16 @@ button:hover span {
   }
 
   .menu-icon {
-    display: block; /* Change display to block */
+    display: block;
     font-size: 1.5rem;
     background: none;
     border: none;
     color: #fff;
     cursor: pointer;
+    margin-bottom: 10px;
   }
 
-  /* Hide the desktop menu on mobile */
-  .navbar ul {
+  #menu.hidden {
     display: none;
   }
 
