--- a/mobile/styles.css
+++ b/mobile/styles.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+
 /* Global Styles */
 * {
   margin: 0;
@@ -5,39 +8,28 @@
   font-family: 'Roboto', sans-serif;
 }
 
-.menu-icon {
-  display: none;
-  font-size: 1.5rem;
-  background: none;
-  border: none;
-  color: #ffffff;
-  cursor: pointer;
-}
-
-#menu.active {
-  display: flex;
-  flex-direction: column;
-}
-
-/* Main Content Styles */
+/* Main Content Styles*/
 .content {
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
   text-align: center;
   color: #fff;
-  padding: 20px;
 }
 
 .content h1 {
-  font-size: 25px;
-  margin-top: 20px;
+  font-size: 70px;
+  margin-top: 80px;
 }
 
 .content p {
-  margin: 15px auto;
+  margin: 20px auto;
   font-weight: 100;
   line-height: 25px;
 }
 
-button {
+ button {
   width: 200px;
   padding: 15px 0;
   text-align: center;
@@ -87,12 +79,12 @@ button:hover span {
   align-items: center;
   justify-content: space-between;
   height: 80px;
-  padding: 0 20px; /* Add padding for better spacing */
 }
 
 .logo {
   width: 120px;
   cursor: pointer;
+
 }
 
 .navbar ul {
@@ -104,18 +96,13 @@ button:hover span {
 }
 
 .navbar ul li {
-  margin: 0 10px;
+  margin: 0 20px;
   position: relative;
 }
 
 .navbar ul li a {
   text-decoration: none;
   color: #fff;
-  padding: 5px 10px;
-}
-
-.hidden {
-  display: none;
 }
 
 /* Navbar Hovering */
@@ -152,7 +139,7 @@ button:hover span {
 }
 
 /* Show the dropdown content when clicking on the parent */
-.dropdown.clicked .dropdown-content {
+.dropdown.clicked .dropdown-content { 
   max-height: 1000px;
 }
 
@@ -189,20 +176,14 @@ button:hover span {
   }
 
   .menu-icon {
-    display: block;
+    display: none;
     font-size: 1.5rem;
     background: none;
     border: none;
     color: #fff;
     cursor: pointer;
-    margin-bottom: 10px;
   }
-
-  /* Hide the desktop menu on mobile */
-  .navbar ul {
-    display: none;
-  }
-
+  
   /* Show the mobile menu when active */
   #menu.active {
     display: flex;
