--- a/mobile/styles.css
+++ b/mobile/styles.css
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
-
 /* Global Styles */
 * {
   margin: 0;
@@ -8,19 +5,30 @@
   font-family: 'Roboto', sans-serif;
 }
 
+.menu-icon {
+  display: none;
+  font-size: 1.5rem;
+  background: none;
+  border: none;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+#menu.active {
+  display: flex;
+  flex-direction: column;
+}
+
 /* Main Content Styles*/
 .content {
-  width: 100%;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
   text-align: center;
   color: #fff;
+  padding: 20px;
 }
 
 .content h1 {
-  font-size: 70px;
-  margin-top: 80px;
+  font-size: 35px;
+  margin-top: 40px;
 }
 
 .content p {
@@ -29,7 +37,7 @@
   line-height: 25px;
 }
 
- button {
+button {
   width: 200px;
   padding: 15px 0;
   text-align: center;
@@ -79,12 +87,12 @@ button:hover span {
   align-items: center;
   justify-content: space-between;
   height: 80px;
+  padding: 0 20px; /* Add padding for better spacing */
 }
 
 .logo {
   width: 120px;
   cursor: pointer;
-
 }
 
 .navbar ul {
@@ -96,13 +104,18 @@ button:hover span {
 }
 
 .navbar ul li {
-  margin: 0 20px;
+  margin: 0 10px;
   position: relative;
 }
 
 .navbar ul li a {
   text-decoration: none;
   color: #fff;
+  padding: 5px 10px;
+}
+
+.hidden {
+  display: none;
 }
 
 /* Navbar Hovering */
@@ -176,14 +189,19 @@ button:hover span {
   }
 
   .menu-icon {
-    display: none;
+    display: block;
     font-size: 1.5rem;
     background: none;
     border: none;
     color: #fff;
     cursor: pointer;
+    margin-bottom: 10px;
   }
-  
+
+  #menu.hidden {
+    display: none;
+  }
+
   /* Show the mobile menu when active */
   #menu.active {
     display: flex;
