--- a/mobile/styles.css
+++ b/mobile/styles.css
@@ -80,11 +80,13 @@
   flex-direction: column;
   transition: max-height 0.5s ease-in;
   font-size: small;
+  max-height: 0;
 }
 
 /* Show the dropdown content when clicking on the parent */
 .dropdown.clicked .dropdown-content {
-  max-height: 1000px;
+  display: block;
+  max-height: 100px;
 }
 
 /* Styles for dropdown menu items */
