--- a/mobile/styles.css
+++ b/mobile/styles.css
@@ -247,3 +247,75 @@ span {
 button:hover span {
   width: 100%;
 }
+
+/*  Contact Styles  */
+.contact {
+  margin-top: 50px;
+  background-color: rgba(58, 58, 58, 0);
+  padding: 20px;
+}
+
+.contact h2 {
+  font-size: 30px;
+  margin-bottom: 20px;
+  text-align: center;
+  color: #ffffff;
+}
+
+.contact-info {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.contact-item {
+  display: flex;
+  align-items: center;
+  margin: 10px;
+  padding: 5px 10px;
+  background-color: rgba(123, 123, 123, 0.648);
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.contact-item i {
+  margin-right: 10px;
+  font-size: 18px;
+  color: #009688;
+}
+
+.contact-item p {
+  font-size: 16px;
+  color: #000;
+}
+
+.location {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 20px;
+}
+
+.location i {
+  margin-right: 10px;
+  font-size: 18px;
+  color: #009688;
+}
+
+.location p {
+  font-size: 16px;
+  color: #ffffff;
+}
+
+.facebook-page {
+  display: flex;
+  justify-content: center;
+  margin: 20px;
+}
+
+.facebook-page iframe {
+  border: none;
+  overflow: hidden;
+  background-color: rgba(255, 255, 255, 0);
+}
+/* Footer styles if you have a footer *
