--- a/mobile/styles.css
+++ b/mobile/styles.css
@@ -206,6 +206,16 @@
   font-size: small;
 }
 
+/* Adding animation To all Files */
+@keyframes fadeIn {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
+}
+
+.content, .contact {
+  animation: fadeIn 2s ease-in-out;
+}
+
 /* Formerly Message */
 .formerly-temp {
   font-size: small;
