--- a/mobile/styles.css
+++ b/mobile/styles.css
@@ -475,11 +475,12 @@ a:hover {
 }
 
 .home-container h1 {
-  font-size: 54px;
+  font-size: 34px;
   font-weight: bold;
   color: #131313;
   margin-bottom: 0px;
   text-align: center;
+  padding: 5px;
 }
 
 .brand-name {
@@ -487,17 +488,16 @@ a:hover {
 }
 
 .home-container h2 {
-  font-size: 42px;
+  font-size: 22px;
   color: #000000;
   margin-bottom: 10px;
-  padding-top: 30px;
+  padding-top: 15px;
 }
 
 .home-container p {
-  font-size: 14px;
+  font-size: 13px;
   color: #000000;
   line-height: 1.5;
-  margin-bottom: 15px;
 }
 
 .home-container ul {
@@ -508,7 +508,7 @@ a:hover {
 
 .home-container li {
   color: #000000;
-  margin: 25px;
+  margin: 15px;
 }
 
 .home-container a.contact-button {
