--- a/desktop/styles.css
+++ b/desktop/styles.css
@@ -21,12 +21,13 @@ body {
   font-size: medium;
   font-weight: 900;
   font-style: italic;
-  margin-top: -10px;
-  margin-bottom: 10px;
+  margin-top: 5px ;
+  margin-bottom: 5px;
   font-family: 'Roboto', sans-serif;
 }
 .content {
   width: 100%;
+  height: 20%;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -40,7 +41,7 @@ body {
 }
 
 .content p {
-  margin: 20px auto;
+  margin: 5px auto;
   font-weight: 100;
   line-height: 25px;
 }
@@ -91,13 +92,44 @@ button:hover .index-span {
 /*-------------------------------------------------------------------------- */
 .banner-home {
   width: 100%;
-  height: 200%;
+  height: 100%;
+  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/desktop/Images/background.jpeg);
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  padding-bottom: 10%;
+}
+.banner {
+  width: 100%;
+  height: 100vh;
   background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/desktop/Images/background.jpeg);
   background-size: cover;
   background-position: center;
   position: relative;
 }
-.banner {
+
+.banner-contact {
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/desktop/Images/background.jpeg);
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  padding-bottom: 2.5%;
+}
+
+
+.banner-about {
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/desktop/Images/background.jpeg);
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+
+.banner-index {
   width: 100%;
   height: 100vh;
   background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/desktop/Images/background.jpeg);
@@ -109,6 +141,7 @@ button:hover .index-span {
 .navbar {
   background-color: rgba(0, 0, 0, 0.767);
   width: 100%;
+  height: 50%;
   margin: auto;
   display: flex;
   align-items: center;
@@ -230,7 +263,6 @@ button:hover .index-span {
 
 /*  Contact Styles  */
 .contact {
-  margin-top: 50px;
   background-color: rgba(58, 58, 58, 0);
   padding: 20px;
 }
@@ -328,12 +360,13 @@ button:hover .index-span {
 .container {
   padding: 50px;
   height: auto;
-  width: 170vh;
+  width: auto;
   margin: 10px auto;
   margin-bottom: 10px;
   background-color: #52525242;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
+  padding: 10%;
 }
 
 .title {
@@ -348,6 +381,7 @@ button:hover .index-span {
   line-height: 1.6;
   color: #ffffff;
   margin-bottom: 20px;
+  width: auto;
 }
 
 /* Add some spacing between paragraphs */
