--- a/mobile/styles.css
+++ b/mobile/styles.css
@@ -19,11 +19,13 @@
 
 .banner-home {
   width: 100%;
-  height: auto;
+  height: 100%;
+  padding-bottom: 10%;
   background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/desktop/Images/background.jpeg);
   background-size: cover;
   background-position: center;
   position: relative;
+
 }
 
 .banner-about {
@@ -33,11 +35,21 @@
   background-size: cover;
   background-position: center;
   position: relative;
+  padding-bottom: 5%;
 }
 
 .banner {
   width: 100%;
   height: 100vh;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(/desktop/Images/background.jpeg);
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.banner-index {
+  width: 100%;
+  height: 100%;
   background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(/desktop/Images/background.jpeg);
   background-size: cover;
   background-position: center;
@@ -219,8 +231,7 @@
 .content {
   text-align: center;
   color: #fff;
-  padding: 20px;
-  transform: translateY(30%);
+  padding: 20%;
 }
 
 .content h1 {
@@ -385,11 +396,10 @@ button:hover .index-span {
 /* About us Styles */
 
 .container {
-  padding: 50px;
-  height: auto;
-  width: auto;
-  margin: 10px auto;
-  margin-bottom: 10px;
+  padding: 70px;
+  height: 50%;
+  width: 90%;
+  margin: 50px auto;
   background-color: #52525242;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
@@ -467,7 +477,7 @@ a:hover {
 /* Home Styles */
 .home-container {
   max-width: 1425px;
-  margin: auto;
+  margin: 20px;
   padding: 30px;
   background-color: #ffffff6f;
   border-radius: 10px;
