--- a/mobile/styles.css
+++ b/mobile/styles.css
@@ -9,12 +9,13 @@
 /* Main styles for banner and navbar */
 
 .banner-contact {
-  width: auto;
-  height:auto;
+  width: 100%;
+  height:100%;
   background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(/desktop/Images/background.jpeg);
   background-size: cover;
   background-position: center;
   position: relative;
+  padding-bottom: 10%;
 }
 
 .banner-home {
@@ -298,6 +299,8 @@ button:hover .index-span {
 }
 
 /*  Contact Styles  */
+
+
 .contact {
   margin-top: 50px;
   background-color: rgba(58, 58, 58, 0);
