--- a/desktop/styles.css
+++ b/desktop/styles.css
@@ -262,9 +262,23 @@ button:hover .index-span {
 }
 
 /*  Contact Styles  */
+
+.container-contact {
+  padding: 50px;
+  height: 100%;
+  width: auto;
+  margin: 10px auto;
+  margin-bottom: 10px;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  padding: 10%;
+}
+
 .contact {
   background-color: rgba(58, 58, 58, 0);
   padding: 20px;
+  height: auto;
+  width: auto;
 }
 
 .contact h2 {
@@ -424,7 +438,7 @@ a:hover {
 }
 
 .sliding-container img {
-  width: 700px;
+  width: 550px;
   height: 400px;
   position: absolute;
   top: 50px;
