--- a/mobile/styles.css
+++ b/mobile/styles.css
@@ -268,14 +268,13 @@
 /* Button styles */
 
 .menu-icon {
-  width: 150px;
+  width: 100px;
   padding: 15px 0;
   text-align: center;
   margin: 20px 10px;
-  border-radius: 25px;
   font-weight: bold;
   background: transparent;
-  color: white;
+  color: rgb(255, 255, 255);
   cursor: pointer;
   position: relative;
   overflow: hidden;
